# AI_PROJECT_RAG

./: .gitignore  README.md  app.py  main.py  myraglecl.ipynb  pyproject.toml  test_sample.py
.github/workflows/: python-package.yml
