[project]
name = "task1-feb-08"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asttokens>=3.0.1",
    "chromadb>=1.4.1",
    "docx2txt>=0.9",
    "dotenv>=0.9.9",
    "langchain>=1.2.9",
    "langchain-classic>=1.0.1",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.9",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=0.1.0",
    "langchain-openai>=1.1.7",
    "sentence-transformers>=3.0.0",
    "streamlit>=1.54.0",
    "streamlit-jupyter>=0.3.1",
]
